Spacing correction on gatway nav

--- a/sass/modules/_header.scss
+++ b/sass/modules/_header.scss
@@ -36,7 +36,7 @@ header{
 			ul{
 				li{
 					display:inline-block;
-					margin-leftt:1.5em;
+					margin-left:1.5em;
 					vertical-align:bottom;
 
 					&.current_page_item{
