--- a/style.css
+++ b/style.css
@@ -843,7 +843,7 @@ header .gateway-nav nav {
 /* line 37, sass/modules/_header.scss */
 header .gateway-nav nav ul li {
   display: inline-block;
-  margin-leftt: 1.5em;
+  margin-left: 1.5em;
   vertical-align: bottom;
 }
 /* line 43, sass/modules/_header.scss */
